k8s/service-frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: ian-lagat

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: <AWS_ACCOUNT_ID>.dkr.ecr.eu-west-1.amazonaws.com/ian-lagat/frontend:latest

          imagePullPolicy: Always

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          ports:
            - containerPort: 80
